--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
+                <version>3.1</version>
+		<configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
