--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: false
 language: java
+jdk:
+  - oraclejdk8
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
 script: mvn deploy --settings target/travis/settings.xml
 branches:
