--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.winkelmann</groupId>
-    <artifactId>spring-ext-logging</artifactId>
+    <artifactId>spring-extension-logging</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Spring Extention Logging</name>
     <url>https://github.com/mwinkelmann/spring-extension-logging</url>
