--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: java
 jdk:
   - oraclejdk8
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
-script: mvn deploy --settings target/travis/settings.xml
+script: mvn release:prepare --settings target/travis/settings.xml
+script: mvn release:perform --settings target/travis/settings.xml
 branches:
   except:
   - travis
