* updated plugins + travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,4 @@ cache:
 after_success:
 - ./cd/before-deploy.sh
 - ./cd/deploy.sh
-- mvn release:prepare -B --settings cd/mvnsettings.xml
-- mvn release:perform --settings cd/mvnsettings.xml
+- ./cd/release.sh
