--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_deploy:
 deploy:
   -
     provider: script
-    script: .travis/deploy.sh
+    script: "cd/deploy.sh"
     skip_cleanup: true
     on:
       repo: mwinkelmann/spring-extension-logging
@@ -38,7 +38,7 @@ deploy:
       jdk: oraclejdk8
   -
     provider: script
-    script: .travis/deploy.sh
+    script: "cd/deploy.sh"
     skip_cleanup: true
     on:
       repo: mwinkelmann/spring-extension-logging
