--- a/.travis.yml
+++ b/.travis.yml
@@ -44,3 +44,5 @@ deploy:
       repo: mwinkelmann/spring-extension-logging
       tags: true
       jdk: oraclejdk8
+notifications:
+  email: mikedotwinkelmann@gmail.com
